name:                logiTex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wdhg/logiTex#readme
license:             BSD3
license-file:        LICENSE
author:              wdhg
maintainer:          example@example.com
copyright:           2020 wdhg
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable logiTex
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
