name:                logitex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wdhg/logiTeX#readme
license:             BSD3
license-file:        LICENSE
author:              wdhg
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable logitex
  hs-source-dirs:
    src
    src/LogiTeX
  main-is:
    Main.hs
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5
  other-modules:
    LogiTeX,
    Utils,
    Lexer,
    Parser,
    Compiler

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
    src/LogiTeX
  main-is:
    Spec.hs
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  build-depends:
    base >= 4.7 && < 5,
    HUnit
  other-modules:
    LogiTeX,
    Utils,
    UtilsTest,
    Lexer,
    LexerTest,
    Parser,
    ParserTest,
    Compiler
